kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lill-orgid-web-app
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: lill-orgid-web-app # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: lill-orgid-web-app
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: lillorgidcontainerregistry.azurecr.io/lillorgidwebapp:live
          name: lill-orgid-web-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          ports:
            - containerPort: 80
              name: http
