kubernetes/clusterip.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lill-orgid-web-app
spec:
  type: ClusterIP
  selector:
    app: lill-orgid-web-app
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: http # Port to forward to in the POD
