kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lill-orgid-web-app
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    # See https://learn.microsoft.com/en-gb/training/modules/aks-deploy-container-app/7-exercise-expose-app for looking up UID in host
    - host: lillorgidwebapp.5d113962302545d7afd4.uksouth.aksapp.io
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
                name: lill-orgid-web-app # Which service the request will be forwarded to
                port:
                  name: http # Which port in that service
            path: / # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
